2015-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* regcomp.c, regex_internal.h, regexec.c: Sync with GLIBC.

	Unrelated:

	* regex_internal.c, regexec.c: __attribute --> __attribute__.

2015-05-26  Paul Eggert  <eggert@Penguin.CS.UCLA.EDU>

	* floatcomp.c (count_trailing_zeros): New function.
	This compiles to a single TZCNT instruction on the x86-64.
	(adjust_uint): Use it to keep more high-order bits when
	some of the lowest-order bits are zero.  This implements
	the documented behavior: "If the result cannot be represented
	exactly as a C 'double', leading nonzero bits are removed one by
	one until it can be represented exactly."

2015-05-26         Arnold D. Robbins     <arnold@skeeve.com>

	* regcomp.c: Fix offsets so error messages come out correct
	once again.

2015-05-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.3: Release tar ball made.

2015-05-15         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* symbol.c (load_symbols): Plug minor memory leak by calling unref(tmp)
	on "identifiers" string after assoc_lookup is done with it.

2015-05-05         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (yylex): Yet Another Fix for parsing bracket
	expressions. Thanks yet again to Andrew Schorr. Maybe it's
	even finally nailed down now.

	Unrelated:

	* config.guess, config.sub: Get latest versions.

2015-05-01         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y: Make sure values are not null in param list.
	Avoids core dump for `function f(func, a) {}'. Thanks to
	Tibor Palinkas <libmawk@igor2.repo.hu>.

2015-04-30         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am: Take --program-prefix into account when
	installing/uninstalling the symlinks, especially 'awk'.
	Thanks to Steffen Nurpmeso <sdaoden@yandex.com> for
	the report.

	Unrelated:

	* awkgram.y (yylex): Yet Another Fix for parsing bracket
	expressions. Thanks again to Andrew Schorr.
