@@ -6,6 +6,11 @@
 
 	* regex_internal.c, regexec.c: __attribute --> __attribute__.
 
+	Related:
+
+	* regex_internal.h: Clean up defines for non-GCC for attribute;
+	essentially sync it with GLIBC.
+
 2015-05-26  Paul Eggert  <eggert@Penguin.CS.UCLA.EDU>
 
 	* floatcomp.c (count_trailing_zeros): New function.
